--- a/sntzr.yaml
+++ b/sntzr.yaml
@@ -7,428 +7,14 @@ global_regex:
   'gr://guid': '[A-Fa-f0-9]{8}(?:-[A-Fa-f0-9]{4}){3}-[A-Fa-f0-9]{12}'
   'gr://sid': 'sid_[0-9a-zA-Z]+_[0-9A-Z]+'
   'gr://email': '[\w\.-]+@[\w\.-]+(?:\.[\w]+)+'
+  'gr://json_string_value': '\\"[^\\"]+\\"'
+  'gr://json_number_value': '[+-]?[0-9]+'
+  'gr://json_array': \[[\\\"\w\,\s\[\]\(\)\<\.\@\>\-\?\&\=\;\']+\]
+  'gr://all_except_comma': '[^,]+'
+  'gr://all_between_angle_brackets': '\<[^\>]+\>'
+  'gr://json_email': '\\"[\w\.-]+@[\w\.-]+(?:\.[\w]+)+\\"'
+  'gr://hash_40': '[A-Fa-f0-9]{40}'
 
 patterns:
-  - 'pattern': 'gr://email'
-    'replace': 'email_simple'
-  - 'pattern': 'carcgl'
-    'replace': 'acmecgl'
-  - 'pattern': 'CARCGL'
-    'replace': 'ACMECGL'
-  - 'pattern': 'Fyrnetics'
-    'replace': 'Acmenetics'
-  - 'pattern': 'cvshealth'
-    'replace': 'acme'
-  - 'pattern': 'aetna'
-    'replace': 'acme2'
-  - 'pattern': '@[^xyz.com].*?>'
-    'replace': '@acmex.com>'
-  - 'pattern': 'vuhl\.root\.mrc'
-    'replace': 'acme.root.mrc'
-  - 'pattern': 'vu\.com'
-    'replace': 'acme.com'
-  - 'pattern': 'veteransunited'
-    'replace': 'acme'
-  - 'pattern': '<EMailAddress>.*?</EMailAddress>'
-    'replace': '<EMailAddress>john@acme.com</EMailAddress>'
-  - 'pattern': 'vu_security_policy'
-    'replace': 'acme_security_policy'
-  - 'pattern': 'aeth\.aetna\.com'
-    'replace': 'acme.com'
-  - 'pattern': '"ssh-rsa .*?\\"'
-    'replace': '"ssh-rsa __SSH_KEY__"'
-  - 'pattern': '\\"USERNAME\\": \\".*?\\"'
-    'replace': '\"USERNAME\": \"johndoe\"'
-  - 'pattern': '\\"USER\\": \\".*?\\"'
-    'replace': '\"USER\": \"johndoe\"'
-  - 'pattern': '\\"PASSWORD\\": \\".*?\\"'
-    'replace': '\"PASSWORD\": \"fakepassword\"'
-  - 'pattern': 'AETH'
-    'replace': 'ACME'
-  - 'pattern': 'aetna\.co'
-    'replace': 'acme.co'
-  - 'pattern': 'aeth'
-    'replace': 'acme'
-  - 'pattern': '\\"windows_desktopini_access_username\\": \\".*?\\"'
-    'replace': '\"windows_desktopini_access_username\": \"johndoe\"'
-  - 'pattern': '\\"mac_address\\": \\".*?\\"'
-    'replace': '\"mac_address\": \"00:00:00:00:00:00\"'
-  - 'pattern': 'EUOSDSFTP01'
-    'replace': 'XXXXXXFTP01'
-  - 'pattern': 'ironmountain'
-    'replace': 'acme'
-  - 'pattern': '\\"user\\": \\".*?\\"'
-    'replace': '\\"user\\": \\"johndoe\\"'
-  - 'pattern': '\\"user\\":\\".*?\\"'
-    'replace': '\\"user\\":\\"johndoe\\"'
-  - 'pattern': '"user": ".*?"'
-    'replace': '"user": "johndoe"'
-  - 'pattern': '<user>.*?</user>'
-    'replace': '<user>johndoe</user>'
-  - 'pattern': '\\u003cuser\\u003e.*?\\u003c/user\\u003e'
-    'replace': '\\u003cuser\\u003ejohndoe\\u003c/user\\u003e'
-  - 'pattern': '/users/[a-zA-Z0-9._-]+'
-    'replace': '/users/johndoe'
-  - 'pattern': 'tartarus.org'
-    'replace': 'somecompany.org'
-  - 'pattern': 'euosdsftp02'
-    'replace': 'xxyyzzftp02'
-  - 'pattern': 'recall.com'
-    'replace': 'emca.com'
-  - 'pattern': 'Carlsberg'
-    'replace': 'JohnD'
-  - 'pattern': 'Sanofi'
-    'replace': 'JohnD'
-  - 'pattern': 'recallstoraenso'
-    'replace': 'recallacme'
-  - 'pattern': 'musta.ch'
-    'replace': 'abcd.ch'
-  - 'pattern': 'aws'
-    'replace': 'xws'
-  - 'pattern': "<Data Name='TargetUserName'>.*?</Data>"
-    'replace': "<Data Name='TargetUserName'>johndoe</Data>"
-  - 'pattern': '\\"csp_account_id\\":\\".*?\\"'
-    'replace': '\\"csp_account_id\\":\\"00000000-0000-0000-0000-0000112dfbc7\\"'
-  - 'pattern': 'NCR'
-    'replace': 'ACME'
-  - 'pattern': 'ncr'
-    'replace': 'acme'
-  - 'pattern': 'CNB'
-    'replace': 'ACME2'
-  - 'pattern': 'cbn'
-    'replace': 'acme2'
-  - 'pattern': 'AMS'
-    'replace': 'ACME4'
-  - 'pattern': 'ams'
-    'replace': 'acme4'
-  - 'pattern': 'wayfair'
-    'replace': 'acme'
-  - 'pattern': 'Robert.Flippen'
-    'replace': 'John.Doe'
-  - 'pattern': 'luis.foulks'
-    'replace': 'Jon.Doe'
-  - 'pattern': 'Dennis.Hawks'
-    'replace': 'Jon.Doe'
-  - 'pattern': 'jesse.kasman'
-    'replace': 'Jane.Doe'
-  - 'pattern': 'josue.ruiz'
-    'replace': 'jon.doe'
-  - 'pattern': 'Curtis.Peace'
-    'replace': 'J.Doe'
-  - 'pattern': 'adam.snider'
-    'replace': 'John.Doe'
-  - 'pattern': 'samuel.quinn'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'sabrina.snyder'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'Travis.Finck'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'toshaa.hope'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'wesley.ambrose'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'blake.mccracken'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'glenn.luteraan'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'martha.godfrey'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'su.wcheatham'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'lisa.duval'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'ricguards'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'muhammad.waqas'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'michael.fisherkeller'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'max.kachungu'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'jasmine.phillips'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'hermann.lang'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'jean.nevelus'
-    'replace': 'jjohn.ddoe'
-  - 'pattern': 'labspace.com'
-    'replace': 'acme.com'
-  - 'pattern': 'rvp.local'
-    'replace': 'acme.local'
-  - 'pattern': 'rapid7'
-    'replace': 'acme7'
-  - 'pattern': 'Rapid7'
-    'replace': 'Acme7'
-  # MCAFEE EPO
-  - 'data': 'xml'
-    'field': 'RawMACAddress'
-    'pattern': '[A-Fa-f0-9]{12}'
-    'replace': 'hex'
-    'activated': false
-  - 'data': 'raw'
-    'field': '-'
-    'pattern': 'S(?:\-\d+){3}'
-    'replace': 'crazy_name'
-    'activated': false
-  - 'data': 'xml'
-    'field': 'MachineName'
-    'pattern': 'gr://machine_name'
-    'replace': 'machine_name'
-    'activated': false
-  - 'data': 'xml'
-    'field': 'TargetHostName'
-    'pattern': 'gr://machine_name'
-    'replace': 'machine_name'
-    'activated': false
-  - 'data': 'xml'
-    'field': 'AnalyzerHostName'
-    'pattern': 'gr://machine_name'
-    'replace': 'machine_name'
-    'activated': false
-  - 'data': 'xml'
-    'field': 'IPAddress'
-    'pattern': 'gr://ipv4'
-    'replace': 'ipv4'
-    'activated': false
-  - 'data' : 'kv'
-    'field': 'externalId'
-    'pattern': '[0-9]{6}'
-    'replace': 'external_id'
-    'activated': false
-  - 'data' : 'kv'
-    'field': 'shost'
-    'pattern': '[a-z0-9]*\.[a-z0-9]*\.[a-z0-9]*'
-    'replace': 'shost'
-    'activated': false
-  - 'data' : 'raw'
-    'field': '-'
-    'pattern': 'dtools-dt-[0-9]{4}-[0-9]{2}'
-    'replace': 'dt_machine_name'
-    'activated': false
-  - 'data': 'raw'
-    'field': '-'
-    'pattern': '\s\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\s'
-    'replace': 'ipv4_between_spaces'
-    'activated': false
-  - 'data': 'raw'
-    'field': '-'
-    'pattern': '[0-9]+:\s+[A-Z0-9_-]+:'
-    'replace': 'syslog_id_host'
-    'activated': false
-  - 'data': 'raw'
-    'field': '-'
-    'pattern': 'Host\s[A-Fa-f0-9]+\.[A-Fa-f0-9]+\.[A-Fa-f0-9]+\s'
-    'replace': 'host_numbers_letters'
-    'activated': false
-  # CISCO_ACS
-  - 'data': 'kv'
-    'field': 'Device IP Address'
-    'pattern': 'gr://ipv4'
-    'replace': 'ipv4'
-    'activated': false
-  - 'data': 'kv'
-    'field': 'AD-IP-Address'
-    'pattern': 'gr://ipv4'
-    'replace': 'ipv4'
-    'activated': false
-  - 'data': 'kv'
-    'field': 'AD-IP-Address-Black-Listed'
-    'pattern': 'gr://ipv4'
-    'replace': 'ipv4'
-    'activated': false
-  - 'data': 'kv'
-    'field': 'DestinationIPAddress'
-    'pattern': 'gr://ipv4'
-    'replace': 'ipv4'
-    'activated': false
-  - 'data': 'kv'
-    'field': 'Remote-Address'
-    'pattern': 'gr://ipv4'
-    'replace': 'ipv4'
-    'activated': false
-  - 'data': 'kv'
-    'field': 'NAS-IP-Address'
-    'pattern': 'gr://ipv4'
-    'replace': 'ipv4'
-    'activated': false
-  - 'data': 'kv'
-    'field': 'Framed-IP-Address'
-    'pattern': 'gr://ipv4'
-    'replace': 'ipv4'
-    'activated': false
-  - 'data': 'kv'
-    'field': 'UserName'
-    'pattern': '[\w\d.]+\\\\\\\\[\w\d.]+'
-    'replace': 'domain_plus_user'
-    'activated': false
-  - 'data': 'kv'
-    'field': 'UserName'
-    'pattern': '[\w\d.-]+/[\w\d.-]+'
-    'replace': 'host_plus_domain'
-    'activated': false
-  - 'data': 'kv'
-    'field': 'UserName'
-    'pattern': '(?:[A-Fa-f0-9]{2}:){5}[A-Fa-f0-9]{2}'
-    'replace': 'mac_address_colon'
-    'activated': false
-  - 'data': 'kv'
-    'field': 'UserName'
-    'pattern': '[\w\d.]+\.[\w\d.]+'
-    'replace': 'user_name_dot_surname'
-    'activated': false
-  - 'data': 'kv'
-    'field': 'User-Name'
-    'pattern': '[\w\d.]+\\\\\\\\[\w\d.]+'
-    'replace': 'domain_plus_user'
-    'activated': false
-  - 'data': 'kv'
-    'field': 'User-Name'
-    'pattern': '[\w\d.]+@[\w\d.]+'
-    'replace': 'domain_email_user'
-    'activated': false
-  - 'data': 'kv'
-    'field': 'User-Name'
-    'pattern': '(?:[A-Fa-f0-9]{2}:){5}[A-Fa-f0-9]{2}'
-    'replace': 'mac_address_colon'
-    'activated': false
-  - 'data': 'kv'
-    'field': 'User-Name'
-    'pattern': '[\w\d.]+\.[\w\d.]+'
-    'replace': 'user_name_dot_surname'
-    'activated': false
-  - 'data': 'kv'
-    'field': 'AD-Domain'
-    'pattern': '[\w\d.]+'
-    'replace': 'ad_domain'
-    'activated': false
-  - 'data': 'kv'
-    'field': 'AD-Log-Id'
-    'pattern': '\d+/\d+'
-    'replace': 'ad_log_id'
-    'activated': false
-  - 'data': 'raw'
-    'field': '-'
-    'pattern': '(?:[A-Fa-f0-9]{2}-){5}[A-Fa-f0-9]{2}'
-    'replace': 'mac_address_dash'
-    'activated': false
-  - 'data': 'raw'
-    'field': '-'
-    'pattern': '(?:[A-Fa-f0-9]{2}:){5}[A-Fa-f0-9]{2}'
-    'replace': 'mac_address_colon'
-    'activated': false
-  # MIMECAST
-  - 'data': 'kv'
-    'field': 'headerFrom'
-    'pattern': '[\w\d.]+@[\w\d.]+'
-    'replace': 'domain_email_user'
-    'activated': false
-  - 'data': 'kv'
-    'field': 'IP'
-    'pattern': 'gr://ipv4'
-    'replace': 'ipv4'
-    'activated': false
-  - 'pattern': 'prod.outlook.com'
-    'replace': 'test.email.com'
-    'activated': false
-  # IMPERVA_WAF
-  - 'data': 'kv'
-    'field': 'src'
-    'pattern': 'gr://ipv4'
-    'replace': 'ipv4'
-    'activated': false
-  - 'data': 'kv'
-    'field': 'dst'
-    'pattern': 'gr://ipv4'
-    'replace': 'ipv4'
-    'activated': false
-  - 'data': 'kv'
-    'field': 'xff'
-    'pattern': 'gr://ipv4'
-    'replace': 'ipv4'
-    'activated': false
-  - 'data': 'kv'
-    'field': 'sourceServiceName'
-    'pattern': 'gr://host'
-    'replace': 'shost'
-    'activated': false
-  - 'data': 'kv'
-    'field': 'url'
-    'pattern': 'gr://host'
-    'replace': 'shost'
-    'activated': false
-  - 'data': 'kv'
-    'field': 'deviceExternalId'
-    'pattern': '\d+'
-    'replace': 'id_number'
-    'activated': false
-  - 'pattern': '[A-Fa-f0-9]{128}'
-    'replace': 'hex'
-    'activated': false
-  - 'pattern': 'nwlink163'
-    'replace': 'device01'
-    'activated': false
-  - 'data': 'kv'
-    'field': 'tcs7'
-    'pattern': 'gr://latitude_longitude'
-    'replace': '17.000000'
-    'activated': false
-  - 'data': 'kv'
-    'field': 'tcs8'
-    'pattern': 'gr://latitude_longitude'
-    'replace': '-38.000000'
-    'activated': false
-  - 'data': 'kv'
-    'field': 'tcs4'
-    'pattern': 'gr://guid'
-    'replace': 'guid'
-    'activated': false
-  - 'data': 'kv'
-    'field': 'siteid'
-    'pattern': '\d+'
-    'replace': 'guid'
-    'activated': false
-  - 'data': 'kv'
-    'field': 'suid'
-    'pattern': '\d+'
-    'replace': 'id_number'
-    'activated': false
-  - 'data': 'kv'
-    'field': 'Customer'
-    'pattern': '[\w\d_-]+'
-    'replace': 'random_company_name'
-    'activated': false
-  # HONEYD
-  - 'pattern': 'gr://ipv4'
-    'replace': 'ipv4'
-    'activated': false
-  # MYSQL
-  - 'pattern': 'p99'
-    'replace': 'z12'
-    'activated': false
-  - 'pattern': 'P99'
-    'replace': 'Z12'
-    'activated': false
-  - 'pattern': 'vcs'
-    'replace': 'abc'
-    'activated': false
-  - 'pattern': 'VCS'
-    'replace': 'ABC'
-    'activated': false
-  - 'pattern': 'gr://sid'
-    'replace': 'sid'
-    'activated': false
-  - 'pattern': 'gr://guid'
-    'replace': 'guid'
-    'activated': false
-  - 'pattern': 'gr://guid'
-    'replace': 'guid'
-    'activated': false
-  - 'pattern': 'host: ''(?!localhost)[a-z]*'''
-    'replace': 'host: ''GENERATE_HOST'''
-    'activated': false
-  - 'pattern': 'db: ''(?!unconnected)[a-z]*'''
-    'replace': 'host: ''GENERATE_DB'''
-    'activated': false
-  - 'pattern': 'user: ''(?!unconnected)[a-z]*'''
-    'replace': 'mysql_user'
-    'activated': false
+
+include_patterns: [./patterns/bro_json.yaml]
